--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="info">
       <h1>Traps! Sandbox</h1>
       <h2>Traps sandbox is a sandbox mode for traps! Traps is a new platformer (currently in development)</h2>
-      <img src="logo1.png">
+      <img src="logo1.JPG">
     </div>
     <script type="text/javascript" src="https://rawgithub.com/craftyjs/Crafty/release/dist/crafty-min.js"></script>
     <script src="game.js"></script>
